--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(fitted,deepregression)
 S3method(plot,deepregression)
 S3method(predict,deepregression)
 S3method(print,deepregression)
+export(cv)
 export(deepregression)
 export(deepregression_init)
 export(prepare_data)
