add Lasso, allow for joint DNN training (#1), add new examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,13 @@ S3method(coef,deepregression)
 S3method(fit,deepregression)
 S3method(fitted,deepregression)
 S3method(plot,deepregression)
+S3method(plot,drCV)
 S3method(predict,deepregression)
 S3method(print,deepregression)
 export(cv)
 export(deepregression)
 export(deepregression_init)
+export(make_folds)
 export(prepare_data)
 import(Matrix)
 import(R6)
