--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,13 @@
 S3method(coef,deepregression)
 S3method(fit,deepregression)
 S3method(fitted,deepregression)
+S3method(mean,deepregression)
 S3method(plot,deepregression)
 S3method(plot,drCV)
 S3method(predict,deepregression)
 S3method(print,deepregression)
+S3method(quantile,deepregression)
+S3method(sd,deepregression)
 export(cv)
 export(deepregression)
 export(deepregression_init)
