--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,14 +22,15 @@ Suggests:
     rsvd,
     testthat
 Imports: 
-    tensorflow, 
-    tfprobability, 
-    keras, 
-    mgcv, 
-    dplyr, 
-    R6, 
-    reticulate (>= 1.14), 
-    Matrix
+    tensorflow,
+    tfprobability,
+    keras,
+    mgcv,
+    dplyr,
+    R6,
+    reticulate (>= 1.14),
+    Matrix,
+    magrittr
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
