change default package requirements, fix S3methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,15 +7,20 @@ S3method(plot,deepregression)
 S3method(plot,drCV)
 S3method(predict,deepregression)
 S3method(quantile,deepregression)
+S3method(sd,deepregression)
 export("%>%")
 export(cv)
 export(deepregression)
 export(deepregression_init)
+export(fit)
 export(make_folds)
+export(make_tfd_dist)
 export(mean.deepregression)
+export(mix_dist_maker)
 export(prepare_data)
 export(print.deepregression)
-export(sd.deepregression)
+export(quantile)
+export(sd)
 import(Matrix)
 import(R6)
 import(dplyr)
@@ -24,4 +29,16 @@ import(mgcv)
 import(reticulate)
 import(tensorflow)
 import(tfprobability)
+importFrom(graphics,abline)
+importFrom(graphics,filled.contour)
+importFrom(graphics,matplot)
+importFrom(graphics,par)
+importFrom(graphics,points)
+importFrom(keras,fit)
 importFrom(magrittr,"%>%")
+importFrom(stats,as.formula)
+importFrom(stats,model.matrix)
+importFrom(stats,terms)
+importFrom(stats,terms.formula)
+importFrom(stats,uniroot)
+importFrom(stats,var)
