--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,9 @@ Description:
 Config/reticulate:
   list(
     packages = list(
-      list(package = "tensorflow_probability", version = "0.7.0", pip = TRUE),
-      list(package = "tensorflow", version = "1.14.0", pip = TRUE)
+      list(package = "tensorflow_probability", version = "0.8.0", pip = TRUE),
+      list(package = "tensorflow", version = "2.0.0", pip = TRUE),
+      list(package = "keras", version = "2.3", pip = TRUE)
     )
   )
 Suggests: 
@@ -34,4 +35,4 @@ Imports:
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
