--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,11 @@
 S3method(coef,deepregression)
 S3method(fit,deepregression)
 S3method(fitted,deepregression)
+S3method(mean,deepregression)
 S3method(plot,deepregression)
 S3method(plot,drCV)
 S3method(predict,deepregression)
+S3method(print,deepregression)
 S3method(quantile,deepregression)
 S3method(sd,deepregression)
 export("%>%")
@@ -15,10 +17,8 @@ export(deepregression_init)
 export(fit)
 export(make_folds)
 export(make_tfd_dist)
-export(mean.deepregression)
 export(mix_dist_maker)
 export(prepare_data)
-export(print.deepregression)
 export(quantile)
 export(sd)
 import(Matrix)
@@ -29,6 +29,7 @@ import(mgcv)
 import(reticulate)
 import(tensorflow)
 import(tfprobability)
+importFrom(Metrics,auc)
 importFrom(graphics,abline)
 importFrom(graphics,filled.contour)
 importFrom(graphics,matplot)
@@ -36,9 +37,15 @@ importFrom(graphics,par)
 importFrom(graphics,points)
 importFrom(keras,fit)
 importFrom(magrittr,"%>%")
+importFrom(methods,is)
+importFrom(methods,slotNames)
 importFrom(stats,as.formula)
 importFrom(stats,model.matrix)
 importFrom(stats,terms)
 importFrom(stats,terms.formula)
 importFrom(stats,uniroot)
 importFrom(stats,var)
+importFrom(tfruns,is_run_active)
+importFrom(tfruns,update_run_metrics)
+importFrom(tfruns,view_run_metrics)
+importFrom(tfruns,write_run_metadata)
