--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 # Use R language
 language: r
+# installs
+install:
+  - sudo apt-get install -y python3.6
 #Define multiple R-versions, one from bioconductor
 r:
   - oldrel
