add python 3.6 to yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 # Use R language
 language: r
-# installs
-install:
-  - sudo apt-get install -y python3.6
+addons:
+  apt:
+    packages:
+    - python3.6
 #Define multiple R-versions, one from bioconductor
 r:
   - oldrel
