--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: r
 addons:
   apt:
     packages:
-    - python3.6
+    - "python3"
 #Define multiple R-versions, one from bioconductor
 r:
   - oldrel
