--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,19 @@
 # Use R language
 language: r
-install:
-  - sudo apt-get install -y python3.6
 #Define multiple R-versions, one from bioconductor
 r:
   - oldrel
   - release
   - devel
   - bioc-devel
+#
+addons:
+  apt:
+    packages:
+      - python-numpy
+      - python-scipy
+      - python-virtualenv
+      - python3-venv
 # Set one of you dependencies from github
 r_github_packages: 
   - r-lib/testthat
