--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
   apt:
     packages:
       - python2.7
+      - python3.6
       - python-numpy
       - python-scipy
       - python-virtualenv
