make packages not mandatory

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(print,deepregression)
 S3method(quantile,deepregression)
 S3method(sd,deepregression)
 export("%>%")
+export(check_and_install)
 export(cv)
 export(deepregression)
 export(deepregression_init)
