--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,10 @@ S3method(fit,deepregression)
 S3method(fitted,deepregression)
 S3method(mean,deepregression)
 S3method(plot,deepregression)
+S3method(plot,deeptrafo)
 S3method(plot,drCV)
 S3method(predict,deepregression)
+S3method(predict,deeptrafo)
 S3method(print,deepregression)
 S3method(quantile,deepregression)
 S3method(sd,deepregression)
@@ -15,6 +17,7 @@ export(check_and_install)
 export(cv)
 export(deepregression)
 export(deepregression_init)
+export(deeptransformation_init)
 export(fit)
 export(make_folds)
 export(make_tfd_dist)
@@ -38,9 +41,11 @@ importFrom(graphics,par)
 importFrom(graphics,points)
 importFrom(keras,fit)
 importFrom(magrittr,"%>%")
+importFrom(methods,as)
 importFrom(methods,is)
 importFrom(methods,slotNames)
 importFrom(stats,as.formula)
+importFrom(stats,dbeta)
 importFrom(stats,model.matrix)
 importFrom(stats,terms)
 importFrom(stats,terms.formula)
