--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 # Use R language
 language: r
-#Define multiple R-versions, one from bioconductor
-r:
-  - oldrel
   - release
   - devel
-  - bioc-devel
+sudo: required
+dist: bionic
+#
+env:
+  - _R_S3_METHOD_LOOKUP_BASEENV_AFTER_GLOBALENV_=true
+#
+repos:
+  CRAN: https://cloud.r-project.org
 #
 addons:
   apt:
@@ -24,3 +28,8 @@ r_github_packages:
 apt_packages:
   - libxml2-dev
 # print installation log
+after_failure:
+  - ./travis-tool.sh dump_logs
+
+after_success:
+  - Rscript -e 'library(covr); coveralls()'
