--- a/.travis.yml
+++ b/.travis.yml
@@ -31,5 +31,5 @@ apt_packages:
 after_failure:
   - ./travis-tool.sh dump_logs
 
-after_success:
-  - Rscript -e 'library(covr); coveralls()'
+# after_success:
+#   - Rscript -e 'library(covr); coveralls()'
