--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,8 @@ apt_packages:
 # print installation log
 after_failure:
   - ./travis-tool.sh dump_logs
+after_success:
+  - Rscript -e 'deepregression::check_and_install()'
 
 # after_success:
 #   - Rscript -e 'library(covr); coveralls()'
