add tf tfp keras to yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,10 @@ addons:
       - python-scipy
       - python-virtualenv
       - python3-venv
+
+before_install:
+  - pip install numpy tensorflow==2.0.0 tensorflow_probability==0.8.0 keras==2.3
+
 # Set one of you dependencies from github
 r_github_packages: 
   - r-lib/testthat
