--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
   - sudo apt-get install python3 python3-pip
   - pip install --upgrade --ignore-installed --user travis virtualenv
   - python3 -m pip install --upgrade pip
-  - pip install tensorflow==2.0.0 tensorflow_probability==0.8.0 keras==2.3 six
+  - pip install six tensorflow==2.0.0 tensorflow_probability==0.8.0 keras==2.3
   - R CMD INSTALL .
 
 # Set one of you dependencies from github
