--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,9 @@ Description:
 Config/reticulate:
   list(
     packages = list(
-      list(package = "tensorflow_probability", version = "0.8.0", pip = TRUE),
+      list(package = "six", pip = TRUE),
       list(package = "tensorflow", version = "2.0.0", pip = TRUE),
+      list(package = "tensorflow_probability", version = "0.8.0", pip = TRUE),
       list(package = "keras", version = "2.3", pip = TRUE)
     )
   )
