add docu stop_iter_cv_result

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(mix_dist_maker)
 export(prepare_data)
 export(quantile)
 export(sd)
+export(stop_iter_cv_result)
 import(Matrix)
 import(R6)
 import(dplyr)
