--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(deepregression)
 export(deepregression_init)
 export(deeptransformation_init)
 export(fit)
+export(get_distribution)
 export(make_folds)
 export(make_tfd_dist)
 export(mix_dist_maker)
