init smaller changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,10 @@ export(deepregression_init)
 export(deeptransformation_init)
 export(fit)
 export(get_distribution)
+export(get_minval)
+export(get_shift)
+export(get_theta)
+export(log_score)
 export(make_folds)
 export(make_tfd_dist)
 export(mix_dist_maker)
