--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Suggests:
     testthat,
     knitr
 Imports: 
-    tensorflow,
+    tensorflow (>= 2.2.0),
     tfprobability,
     keras,
     mgcv,
