--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -27,10 +27,10 @@ jobs:
       - name: Install dependencies II
         run: |
           conda update -n base -c defaults conda
-      - name: Install dependencies III
-        run: |
-          keras::install_keras(method = "conda", tensorflow = "2.0", extra_packages = c("tfprobability==0.8", "six"))
-        shell: Rscript {0}
+      #- name: Install dependencies III
+      #  run: |
+      #    keras::install_keras(method = "conda", tensorflow = "2.0", extra_packages = c("tfprobability==0.8", "six"))
+      #  shell: Rscript {0}
       - name: Check
         run: rcmdcheck::rcmdcheck(args = "--no-manual --as-cran --no-build-vignettes", error_on = "error")
         shell: Rscript {0}
