--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -18,7 +18,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
-      - name: Install dependencies
+      - name: Install linux prerequesites
+        run: |
+          apt install libxml2-dev
+      - name: Install dependencies I
         run: |
           install.packages(c("remotes", "rcmdcheck"))
           remotes::install_deps(dependencies = TRUE)
@@ -27,10 +30,6 @@ jobs:
       - name: Install dependencies II
         run: |
           conda update -n base -c defaults conda
-      #- name: Install dependencies III
-      #  run: |
-      #    keras::install_keras(method = "conda", tensorflow = "2.0", extra_packages = c("tfprobability==0.8", "six"))
-      #  shell: Rscript {0}
       - name: Check
         run: rcmdcheck::rcmdcheck(args = "--no-manual --as-cran --no-build-vignettes", error_on = "error")
         shell: Rscript {0}
