--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -20,7 +20,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
       - name: Install linux prerequesites
         run: |
-          apt install libxml2-dev
+          sudo apt-get install libxml2-dev
       - name: Install dependencies I
         run: |
           install.packages(c("remotes", "rcmdcheck"))
