--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -26,10 +26,9 @@ jobs:
           install.packages(c("remotes", "rcmdcheck"))
           remotes::install_deps(dependencies = TRUE)
           reticulate::install_miniconda(update = TRUE)
+          reticulate::conda_create('r-reticulate', packages = c('python==3.6.9'))
+          keras::install_keras(tensorflow = "2.0", extra_packages = c('IPython', 'requests', 'certifi', 'urllib3'))
         shell: Rscript {0}
-      - name: Install dependencies II
-        run: |
-          conda update -n base -c defaults conda
       - name: Check
         run: rcmdcheck::rcmdcheck(args = "--no-manual --as-cran --no-build-vignettes", error_on = "error")
         shell: Rscript {0}
