--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -27,7 +27,7 @@ jobs:
           remotes::install_deps(dependencies = TRUE)
           reticulate::install_miniconda(update = TRUE)
           reticulate::conda_create('r-reticulate', packages = c('python==3.6.9'))
-          keras::install_keras(tensorflow = "2.0", extra_packages = c('IPython', 'requests', 'certifi', 'urllib3'))
+          keras::install_keras(tensorflow = "2.0", extra_packages = c('IPython', 'requests', 'certifi', 'urllib3', 'six', 'tensorflow_probability==0.8.0'))
         shell: Rscript {0}
       - name: Check
         run: rcmdcheck::rcmdcheck(args = "--no-manual --as-cran --no-build-vignettes", error_on = "error")
