--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -18,16 +18,22 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
+      - uses: r-lib/actions/setup-tinytex@master
+      - uses: r-lib/actions/setup-pandoc@master
       - name: Install linux prerequesites
         run: |
-          sudo apt-get install libxml2-dev
-      - name: Install dependencies I
+          sudo apt-get install libxml2-dev libcurl4-openssl-dev
+      - name: Install dependencies - Keras & TF
         run: |
           install.packages(c("remotes", "rcmdcheck"))
           remotes::install_deps(dependencies = TRUE)
           reticulate::install_miniconda(update = TRUE)
           reticulate::conda_create('r-reticulate', packages = c('python==3.6.9'))
           keras::install_keras(tensorflow = "2.0", extra_packages = c('IPython', 'requests', 'certifi', 'urllib3', 'six', 'tensorflow_probability==0.8.0'))
+        shell: Rscript {0}
+      - name: Install dependencies - Tutorial
+        run: |
+          install.packages(c("ggplot2", "reshape2", "MASS", "gamlss.data", "distr"))
         shell: Rscript {0}
       - name: Check
         run: rcmdcheck::rcmdcheck(args = "--as-cran", error_on = "error")
