update docu, remove README files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ S3method(fitted,deepregression)
 S3method(mean,deepregression)
 S3method(plot,deepregression)
 S3method(plot,deeptrafo)
-S3method(plot,drCV)
 S3method(predict,deepregression)
 S3method(predict,deeptrafo)
 S3method(print,deepregression)
@@ -27,6 +26,7 @@ export(log_score)
 export(make_folds)
 export(make_tfd_dist)
 export(mix_dist_maker)
+export(plot_cv)
 export(prepare_data)
 export(quantile)
 export(sd)
