--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(get_shift)
 export(get_theta)
 export(log_score)
 export(make_folds)
+export(make_generator_from_matrix)
 export(make_tfd_dist)
 export(mix_dist_maker)
 export(plot_cv)
