--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Config/reticulate:
   list(
     packages = list(
       list(package = "six", pip = TRUE),
-      list(package = "tensorflow", version = NA, pip = TRUE),
+      list(package = "tensorflow", version = 2.1, pip = TRUE),
       list(package = "tensorflow_probability", version = "0.8.0", pip = TRUE),
       list(package = "keras", version = "2.3", pip = TRUE)
     )
