--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Config/reticulate:
   list(
     packages = list(
       list(package = "six", pip = TRUE),
-      list(package = "tensorflow", version = 2.1, pip = TRUE),
+      list(package = "tensorflow", version = "2.1", pip = TRUE),
       list(package = "tensorflow_probability", version = "0.8.0", pip = TRUE),
       list(package = "keras", version = "2.4", pip = TRUE)
     )
