--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ importFrom(methods,as)
 importFrom(methods,is)
 importFrom(methods,slotNames)
 importFrom(stats,as.formula)
+importFrom(stats,coef)
 importFrom(stats,dbeta)
 importFrom(stats,model.matrix)
 importFrom(stats,terms)
