--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,9 +13,8 @@ Config/reticulate:
     packages = list(
       list(package = "six", pip = TRUE),
       list(package = "tensorflow", version = "2.1", pip = TRUE),
-      list(package = "tensorflow_probability", version = "0.8.0", pip = TRUE),
-      list(package = "keras", version = "2.4", pip = TRUE)
-    )
+      list(package = "tensorflow_probability", version = "0.9", pip = TRUE),
+      list(package = "keras", version = "2.4.3", pip = TRUE))
   )
 Suggests:
     rsvd,
