--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(cv)
 export(deepregression)
 export(deepregression_init)
 export(deeptransformation_init)
+export(dr_init)
 export(fit)
 export(get_distribution)
 export(get_minval)
@@ -58,6 +59,7 @@ importFrom(stats,as.formula)
 importFrom(stats,coef)
 importFrom(stats,dbeta)
 importFrom(stats,model.matrix)
+importFrom(stats,predict)
 importFrom(stats,terms)
 importFrom(stats,terms.formula)
 importFrom(stats,uniroot)
